--- a/thaihotel.html
+++ b/thaihotel.html
@@ -16,5 +16,10 @@
             <li><a href="destination.html">Destination</a></li>
         </ul>
     </nav>
+    <div class="tombol">
+        <div class="stories">
+            <a href="thailand.html"><button>Previous</button></a>
+        </div>
+    </div>
 </body>
 </html>
