--- a/thailand.html
+++ b/thailand.html
@@ -38,7 +38,7 @@
             <a href="thaiwisata.html"><img src="picture/objek icon.png" alt=""></a>
         </div>
         <div class="imgrefer">
-            <a href="thailand/hotel.html"><img src="picture/hotel icon.png" alt=""></a>
+            <a href="thaihotel.html"><img src="picture/hotel icon.png" alt=""></a>
         </div>
         <div class="imgrefer">
             <a href="thailand/resto.html"><img src="picture/restoran icon1.png" alt=""></a>
