--- a/thaihotel.html
+++ b/thaihotel.html
@@ -21,5 +21,19 @@
             <a href="thailand.html"><button>Previous</button></a>
         </div>
     </div>
+        <div class="des">
+        <div class="desteks">
+            <h1>Night Hotel Bangkok - Sukhumvit 15</h1>
+            <p>Night Hotel Bangkok - Sukhumvit 15 is a 4-star boutique hotel strategically located in the center of Bangkok, on Soi Sukhumvit 15, Watthana district. 
+                The hotel offers a comfortable and stylish stay, perfect for both business and leisure travelers.
+            </p>
+            <p>
+                Address: 10 Sukhumvit Soi 15, Kloengtoey Nua, Wattana, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 400 TRY
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
