Thailand Hotel (blm selesai)

--- a/thaihotel.html
+++ b/thaihotel.html
@@ -21,5 +21,101 @@
             <a href="thailand.html"><button>Previous</button></a>
         </div>
     </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Night Hotel Bangkok - Sukhumvit 15</h1>
+            <p>Night Hotel Bangkok – Sukhumvit 15 is a chic boutique hotel nestled in the heart of Bangkok's 
+               vibrant Sukhumvit district. Offering a blend of modern design and traditional Thai hospitality, 
+               the hotel provides guests with a unique urban retreat. Its prime location ensures easy access to 
+               shopping centers, nightlife, and public transportation.
+            </p>
+            <p>
+                Address: 10 Sukhumvit Soi 15, Khlong Toei Nuea, Watthana, Bangkok 10110, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 1.800 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/night hotel bangkok.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Hotel Baiyoke Sky</h1>
+            <p>Baiyoke Sky Hotel stands as Thailand's tallest hotel, soaring 88 stories above Bangkok's skyline. 
+               Located in the bustling Pratunam area, it's surrounded by vibrant markets and major shopping 
+               centers like Central World and Siam Paragon. The hotel features 673 spacious rooms and suites, 
+               many offering panoramic city views.
+            </p>
+            <p>
+                Address: 222 Ratchaprarop Road, Ratchathewi, Bangkok 10400, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 2.650 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/baiyoke.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Ambassador Hotel Bangkok</h1>
+            <p>Ambassador Hotel Bangkok is a 4-star hotel situated in the vibrant Sukhumvit district, offering 
+               guests a blend of comfort and convenience. The hotel features 760 spacious rooms and suites 
+               across its Main and Tower Wings, each equipped with modern amenities such as satellite TV, 
+               high-speed Wi-Fi, tea and coffee-making facilities, direct dial telephone, and electronic safes.
+            </p>
+            <p>
+                Address: 171 Sukhumvit Soi 11, Klongtoey Nue, Wattana, Bangkok 10110, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 1.650 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/Ambassador.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Unico Express</h1>
+            <p>Unico Express Hotel Bangkok is a 3-star hotel situated in the vibrant Sukhumvit area, offering ]
+               guests a blend of comfort and convenience. The hotel features 135 rooms across various 
+               categories, each equipped with amenities such as air conditioning, satellite TV, minibar, and a 
+               safety deposit box. 
+            </p>
+            <p>
+                Address: 74 Sukhumvit Soi 3 Road (Nana Nua), Wattana District, Bangkok 10110, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 1.000 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/unico expres.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Nana Hotel</h1>
+            <p>Nana Hotel Bangkok is a 3-star hotel situated in the vibrant Sukhumvit area, offering guests a 
+               blend of comfort and convenience. The hotel features 349 rooms across various categories, each 
+               equipped with amenities such as air conditioning, satellite TV, minibar, and a safety deposit 
+               box.
+            </p>
+            <p>
+                Address: 4 Nana Tai, Sukhumvit Road, Khlong Toei, Bangkok 10110, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 1.690 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/nana hotel.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>FX Hotel Metrolink Makkasan</h1>
+            <p>FX Hotel Metrolink Makkasan is a 3.5-star hotel situated in the vibrant Ratchathewi district, 
+               offering guests a blend of comfort and convenience. The hotel features 90 well-appointed rooms, 
+               each equipped with amenities such as air conditioning, satellite TV, minibar, and a safety 
+               deposit box.
+            </p>
+            <p>
+                Address: 57 Asoke-Dindaeng Road, Makkasan (Airport Link), Ratchathewi, Bangkok 10310, Thailand.<br> Operational Hours: 24 Hours <br> Price: Start from 1.200 THB / Night
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/FX.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
