--- a/thaihotel.html
+++ b/thaihotel.html
@@ -28,7 +28,21 @@
                 The hotel offers a comfortable and stylish stay, perfect for both business and leisure travelers.
             </p>
             <p>
-                Address: 10 Sukhumvit Soi 15, Kloengtoey Nua, Wattana, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 400 TRY
+                Address: 10 Sukhumvit Soi 15, Kloengtoey Nua, Wattana, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 2,825.7368 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
+            <div class="des">
+        <div class="desteks">
+            <h1>Hotel Baiyoke Sky</h1>
+            <p>Baiyoke Sky Hotel is Thailand's tallest hotel with 88 floors, located in the center of Bangkok's Pratunam district. The hotel offers stunning city views and a range of luxury amenities,
+                 making it an ideal choice for travelers looking for a unique stay in Bangkok.
+            </p>
+            <p>
+                Address: 222 Ratchaprarop Road, Ratchathewi, Pratunam, Bangkok 10400, Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 2,825.7368 THB
             </p>
         </div>
         <div class="desimg">
