--- a/thairesto.html
+++ b/thairesto.html
@@ -25,16 +25,103 @@
     </div>
     <div class="des">
         <div class="desteks">
-            <h1>Pho 2000</h1>
-            <p>Phở 2000 is a renowned Vietnamese restaurant in Ho Chi Minh City, famously known for serving 
-               former U.S. President Bill Clinton during his visit in 2000. Situated near the bustling Bến Thành 
-               Market, the restaurant offers a clean and modern dining environment with ample seating.
+            <h1>Jay Fai</h1>
+            <p>Jay Fai (ร้านเจ๊ไฝ) is a legendary street food restaurant in Bangkok that has earned one Michelin star since 2018. Known for its high-quality seafood dishes cooked by owner Supinya “Jay Fai” Junsuta, 
+                the restaurant is a must-visit culinary destination for food lovers.
             </p>
             <p>
-                Address: 1–3 Phan Chu Trinh Street, Bến Thành Ward, District 1, Ho Chi Minh City, Vietnam.<br> Operational Hours: 07:00 - 22:00<br> Price: Start from 40.000 VND
+                Address: 327 Maha Chai Road, Khwaeng Samran Rat, Khet Phra Nakhon, Bangkok 10200, Thailand.<br> Operational Hours: 14:00 - 23:00<br> Price: Start from 500 - 1,500 THB
             </p>
         </div>
         <div class="desimg">
             <img src="picture/pho.png" alt="">
         </div>
     </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Savoey Seafood</h1>
+            <p>Savoey Seafood is a renowned seafood restaurant chain in Bangkok that has been operating for over 50 years. Known for serving fresh seafood with authentic Thai flavors, 
+                Savoey is a favorite dining destination for tourists and locals alike.
+            </p>
+            <p>
+                Address: A-Square, Soi Sukhumvit 26, Rama 4 Road, Khlong Toei, Bangkok, Thailand.<br> Operational Hours: 10:30 - 23:00<br> Price: Start from 400 - 1,000 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Bo.lan</h1>
+            <p>Bo.lan is a fine dining restaurant in Bangkok known for its commitment to the preservation of traditional Thai cuisine and sustainable practices. Founded by husband and wife team, Chef Duangporn “Bo” Songvisava and Chef Dylan Jones,
+                 Bo.lan is known for serving authentic Thai dishes with a modern approach that still honors tradition.
+            </p>
+            <p>
+                Address:  24 Soi Sukhumvit 53 (Soi Pai Dee Ma Dee), Khlong Toey Nua, Wattana, Bangkok 10110, Thailand.<br> Operational Hours: 18:00 - 22:30<br> Price: Start from 1.000 - 5.000 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Thip Samai</h1>
+            <p>Thipsamai Pad Thai (ทิพย์สมัย ผัดไทยประตูผี) is a legendary restaurant in Bangkok that is widely recognized as serving the best Pad Thai in Thailand. Established in 1939, 
+                Thipsamai has become a culinary icon that is a must-visit for tourists and local foodies alike.
+            </p>
+            <p>
+                Address: 313-315 Jalan Maha Chai, Samran Rat, Phra Nakhon, Bangkok 10200, Thailand.<br> Operational Hours: 17:00 - 03:00<br> Price: Start from 60 - 150 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Somtum Der</h1>
+            <p>Somtum Der is a restaurant that brings the authentic flavors of Isan (Northeast Thailand) cuisine to Bangkok. Founded in 2012, the restaurant has expanded its reach to major cities such as New York, Tokyo,
+                 and Taipei, while maintaining its traditional culinary roots.
+            </p>
+            <p>
+                Address: Soi Sala Daeng , Bangkok , Thailand.<br> Operational Hours: 07:00 - 22:00<br> Price: Start from 40.000 VND
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Jay Fai</h1>
+            <p>Phở 2000 is a renowned Vietnamese restaurant in Ho Chi Minh City, famously known for serving 
+               former U.S. President Bill Clinton during his visit in 2000. Situated near the bustling Bến Thành 
+               Market, the restaurant offers a clean and modern dining environment with ample seating.
+            </p>
+            <p>
+                Address: 327 Maha Chai Road, Khwaeng Samran Rat, Khet Phra Nakhon, Bangkok 10200, Thailand.<br> Operational Hours: 07:00 - 22:00<br> Price: Start from 40.000 VND
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Jay Fai</h1>
+            <p>Phở 2000 is a renowned Vietnamese restaurant in Ho Chi Minh City, famously known for serving 
+               former U.S. President Bill Clinton during his visit in 2000. Situated near the bustling Bến Thành 
+               Market, the restaurant offers a clean and modern dining environment with ample seating.
+            </p>
+            <p>
+                Address: 327 Maha Chai Road, Khwaeng Samran Rat, Khet Phra Nakhon, Bangkok 10200, Thailand.<br> Operational Hours: 07:00 - 22:00<br> Price: Start from 40.000 VND
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/pho.png" alt="">
+        </div>
+    </div>
+    </body>
+</html>
