--- a/thaihotel.html
+++ b/thaihotel.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Thailand</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -42,7 +44,76 @@
                  making it an ideal choice for travelers looking for a unique stay in Bangkok.
             </p>
             <p>
-                Address: 222 Ratchaprarop Road, Ratchathewi, Pratunam, Bangkok 10400, Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 2,825.7368 THB
+                Address: 222 Ratchaprarop Road, Ratchathewi, Pratunam, Bangkok 10400, Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 3.000,18 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/sky gem.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Ambassador Hotel Bangkok</h1>
+            <p>Ambassador Hotel Bangkok is a 4-star hotel located in the heart of Bangkok's Sukhumvit district, on Soi Sukhumvit 11. The hotel offers comfortable accommodation and a wide range of facilities, perfect for both business and leisure travelers.
+            </p>
+            <p>
+                Address: 171 Soi Sukhumvit 11, Khlong Toei Nuea, Watthana, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 978,06 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Anya Nana @ Sukhumvit </h1>
+            <p>Anya Nana @ Sukhumvit is a 3-star hotel strategically located in the Sukhumvit Soi 3 area of Bangkok. With 135 rooms, the hotel offers comfortable accommodation at affordable prices, perfect for travelers looking 
+                for a central location close to shopping centers and public transportation.
+            </p>
+            <p>
+                Address: 3 Khlong Tan, Khlong Toei, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 748,04 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>Nana Hotel</h1>
+            <p>Nana Hotel Bangkok is a 3-star hotel located in the heart of Bangkok's Sukhumvit district, on Soi Nana Tai (Sukhumvit Soi 4). The hotel is popular with travelers looking for affordable
+                 accommodation with easy access to nightlife and public transportation.
+            </p>
+            <p>
+                Address: 4 Nana Tai Alley, Khlong Toei, Bangkok 10110 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 886,05 THB
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>The Anantara Siam Bangkok </h1>
+            <p>Anantara Siam Bangkok Hotel is a 5-star luxury hotel located in Bangkok's Ratchadamri district. Formerly known as the Four Seasons Bangkok, the hotel offers a blend of classic Thai architecture and modern amenities,
+                 creating an elegant and serene atmosphere amidst the hustle and bustle of the city.
+            </p>
+            <p>
+                Address: 155 Rajadamri Road, Pathumwan, Bangkok 10330, Thailand. <br> Operational Hours: 24 Hours <br> Price: Varies, depending on the room
+            </p>
+        </div>
+        <div class="desimg">
+            <img src="picture/four season hotel.png" alt="">
+        </div>
+    </div>
+    <div class="des">
+        <div class="desteks">
+            <h1>FX Hotel Metrolink Makkasan</h1>
+            <p>FX Hotel Metrolink Makkasan is a 3-star hotel strategically located in the Ratchathewi area of Bangkok. With direct access to Phetchaburi MRT Station and just a few steps away from Makkasan Airport Rail Link Station,
+                 the hotel is an ideal choice for travelers seeking comfort and ease of transportation.
+            </p>
+            <p>
+                Address: 57 Asoke – Dindaeng Rd., Makkasan, Ratchathewi, Bangkok 10310 , Thailand. <br> Operational Hours: 24 Hours <br> Price: Start from 988,06 THB
             </p>
         </div>
         <div class="desimg">
